<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:background="@color/prime"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="24dp"
    android:scrollbars="none"
    tools:context=".activities.RegisterActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"

        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/righteous"
            android:text="@string/welcome_to_footsapp"
            android:textColor="@color/text"
            android:textSize="32sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="160dp"

            android:layout_gravity="center_vertical"
            >

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_input"
                android:fontFamily="@font/righteous"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/text"
                android:textSize="13sp" />


            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_input"
                android:fontFamily="@font/righteous"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/text"
                android:textSize="13sp" />

        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/righteous"
            android:text="@string/login_btn_login"
            android:textColor="@color/text"
            app:backgroundTint="@color/buttons" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/righteous"
            android:text="@string/settings"
            android:textColor="@color/text"
            app:backgroundTint="@color/buttons" />

        <LinearLayout
            android:id="@+id/LoginRedirectLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnRegister"
            app:layout_constraintVertical_bias="0.43">

            <TextView
                android:id="@+id/tvRegisterText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/righteous"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="5dp"
                android:text="@string/login_tv_no_account"

                android:textAlignment="center"
                android:textColor="@color/text" />

            <TextView
                android:id="@+id/tvRegisterActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/righteous"
                android:paddingLeft="20dp"
                android:paddingTop="5dp"
                android:paddingRight="20dp"
                android:text="@string/login_tv_sign_up"
                android:textAlignment="center"
                android:textColor="@color/text" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>






