<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Theme.colorless_background"
    tools:context=".activities.AddChatActivity">

    <LinearLayout
        android:id="@+id/ChatsRedirectLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.43">

        <TextView
            android:id="@+id/tvChatsActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:paddingRight="20dp"
            android:textAlignment="center"
            style="@style/Theme.text_view"
            android:text="@string/back_to_chats" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/friend_s_username"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textAlignment="center"
            style="@style/Theme.input_background" />

        <EditText
            android:id="@+id/etNickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/friend_s_nickname"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textAlignment="center"
            style="@style/Theme.input_background" />

        <EditText
            android:id="@+id/etServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:layout_margin="10dp"
            android:hint="@string/friend_s_server"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textAlignment="center"
            style="@style/Theme.input_background"/>


        <Button
            android:id="@+id/btnNewContact"
            android:layout_marginTop="20dp"
            style="@style/Theme.main_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_contact" />



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>