<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_screen"
    tools:context=".activities.ChatsActivity">


    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_tound_screen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/separate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_image">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lvContacts"
            android:layout_width="219dp"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:overScrollMode="never"
            android:padding="20dp"

            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


    </FrameLayout>

    <TextView
        android:id="@+id/chats_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/righteous"
        android:text="@string/chats_headline"
        android:textColor="@color/text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingStart="14dp"
        app:layout_constraintBottom_toBottomOf="@+id/user_image"
        app:layout_constraintEnd_toStartOf="@+id/separate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/user_image" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/footsapp_home_logo"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toStartOf="@+id/chats_headline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_add"
        app:layout_constraintEnd_toStartOf="@+id/separate"
        app:layout_constraintBottom_toBottomOf="parent" />


    <View
        android:id="@+id/separate"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@android:color/black"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent" />


    <View
        android:id="@+id/viewBackground"
        android:layout_width="469dp"
        android:layout_height="254dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background_chat_top"
        app:layout_constraintBottom_toTopOf="@id/send_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.214"
        app:layout_constraintStart_toEndOf="@+id/separate"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.962" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"

        android:src="@drawable/footsapp_home_logo"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintStart_toEndOf="@+id/separate"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lv_messages"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:overScrollMode="never"
        android:padding="20dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

        app:layout_constraintBottom_toTopOf="@+id/input_msg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/separate"
        app:layout_constraintTop_toBottomOf="@+id/viewSupporter"
        app:stackFromEnd="true" />

    <TextView
        android:id="@+id/contact_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:ellipsize="end"
        android:fontFamily="@font/righteous"

        android:gravity="center"
        android:maxLines="1"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:text="contact_name"
        android:textColor="@color/text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/profile_image"

        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintTop_toTopOf="@+id/profile_image" />

    <EditText
        android:id="@+id/input_msg"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/input_background"
        android:hint="@string/send_a_message"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/msg_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/send_layout"
        app:layout_constraintStart_toEndOf="@+id/separate" />

    <View
        android:id="@+id/viewSupporter"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/profile_image"
        app:layout_constraintStart_toEndOf="@+id/separate"/>

    <FrameLayout
        android:id="@+id/send_layout"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/input_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/button_send"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:padding="8dp"
            android:src="@drawable/ic_send"
            android:tint="@color/msg_text" />

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
